moralla i en la carpeta di, estan els projectes de python sobre glade i la conexió de base de dades

--- a/AndroidStudioProjects/ExerciciRecopilatori/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/ExerciciRecopilatori/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Acerca" />
-        <activity android:name=".Dibujar"></activity>
+        <activity android:name=".Dibujar" />
+        <activity android:name=".Calcular" />
+        <activity android:name=".DestiZona"></activity>
     </application>
 
 </manifest>
