aplicaciófinalitzada de moment, falta que borre en cascada que no ho fa, tot lo de més si,esta de 10

--- a/AndroidStudioProjects/BaseDades/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         <activity android:name=".MyDialogFragment" />
         <activity android:name=".NouMarca" />
         <activity android:name=".NouModel" />
-        <activity android:name=".Factura"></activity>
+        <activity android:name=".Factura" />
+        <activity android:name=".Llistat" />
+        <activity android:name=".Delete"></activity>
     </application>
 
 </manifest>
